# mpreg

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  EXAMPLES.md  FEATURE_EXPANSION_AND_MODERNIZATION.md  GETTING_STARTED.md  HISTORY.md  README.md  TESTING_FRAMEWORK_SUMMARY.md  WORKING_EXAMPLES.md  dev-1.config.yaml  dev-2.config.yaml  pyproject.toml  test_edge_simple.py
.github/workflows/: ci.yml
debug/: debug_dependency_trace.py  debug_execution_trace.py  debug_parallel_convergence.py  debug_simple_analytics.py  debug_test.py
docs/: ADVANCED_FEDERATION_ARCHITECTURE_GUIDE.md  ARCHITECTURE.md  BLOCKCHAIN_ARCHITECTURE.md  BLOCKCHAIN_COMPLETE_GUIDE.md  BLOCKCHAIN_MESSAGE_QUEUE_ARCHITECTURE.md  BYZANTINE_FAULT_DETECTION_DEBUG_GUIDE.md  CACHE_FEDERATION_CONFLICT_RESOLUTION.md  CACHE_FEDERATION_GUIDE.md  CACHING_SYSTEM.md  COMPREHENSIVE_TESTING_SESSION_SUMMARY.md  DAO_COMPREHENSIVE_GUIDE.md  DAO_INTEGRATION_EXAMPLES.md  DISCOVERY_PLATFORM_ROADMAP.md  DISCOVERY_RUNBOOKS.md  DNS_INTEROP_GUIDE.md  DNS_RUNBOOKS.md  EXAMPLES.md  FABRIC_LINK_STATE_ROUTING.md  FABRIC_ROUTE_POLICIES.md  FABRIC_ROUTE_SECURITY.md  FEDERATED_ARCHITECTURE_PROJECT_PLAN.md  FEDERATED_MULTI_CLUSTER_RPC_IMPLEMENTATION.md  FEDERATION_ALERTING_GUIDE.md  FEDERATION_ARCHITECTURE.md  FEDERATION_ARCHITECTURE_AND_FAULT_TOLERANCE.md  FEDERATION_CLI.md  FEDERATION_CLI_QUICK_REFERENCE.md  FEDERATION_DEVELOPER_QUICK_REFERENCE.md  FEDERATION_PLANET_SCALE_ROADMAP.md  FEDERATION_QUICK_START_EXAMPLES.md  FEDERATION_SYSTEM_ANALYSIS.md  FINAL_COMPLETION_STATUS.md  GETTING_STARTED.md  IMPLEMENT_FUTURE_IDEAS_PLAN.md  INTEGRATION_CAPABILITY_OPTIMIZATION_PLAN.md  INTERMEDIATE_RESULTS_DESIGN.md  MANAGEMENT_UI_CLI_NEXT_STEPS.md  MERKLE_TREE_GUIDE.md  MPREG_CLIENT_GUIDE.md  MPREG_PROTOCOL_SPECIFICATION.md  (+11 more)
docs/archive/: COMPREHENSIVE_TESTING_SESSION_SUMMARY.md  CURRENT_FAILING_TEST_IDEAS_AND_NEXT_STEPS.md  FABRIC_PATH_VECTOR_ROUTING_AUDIT.md  FABRIC_PATH_VECTOR_ROUTING_PLAN.md  FEDERATED_ARCHITECTURE_PROJECT_PLAN.md  FEDERATION_PLANET_SCALE_ROADMAP.md  FEDERATION_SYSTEM_ANALYSIS.md  FINAL_COMPLETION_STATUS.md  FUTURE_TODO_MESH_AUDIT.md  IMPLEMENT_FUTURE_IDEAS_PLAN.md  INTEGRATION_CAPABILITY_OPTIMIZATION_PLAN.md  MESH_ROUTING_RPC_PLAN.md  README.md  UNIFIED_DISTRIBUTED_FABRIC_PLAN.md
examples/: advanced_cluster_examples.py  benchmarks.py  comprehensive_performance_tests.py  production_deployment.py  quick_demo.py  real_world_examples.py  simple_benchmark.py  simple_working_demo.py
mpreg/: __init__.py  cli.py  client.py  client_api.py  client_peer.py  config.py  connection.py  model.py  registry.py  serialization.py  server.py  timer.py
mpreg/cli/: __init__.py  federation_cli.py  main.py
mpreg/client/: __init__.py  client.py  client_api.py  client_peer.py  cluster_client.py  dns_client.py  pubsub_client.py
mpreg/core/: __init__.py  advanced_cache_ops.py  blockchain_ledger.py  blockchain_message_queue.py  blockchain_message_queue_types.py  cache_gossip.py  cache_interfaces.py  cache_models.py  cache_protocol.py  cache_pubsub_integration.py  caching.py  cluster_map.py  config.py  connection.py  connection_events.py  discovery_events.py  discovery_monitoring.py  discovery_rate_limit.py  discovery_resolver.py  discovery_summary.py  discovery_summary_resolver.py  discovery_tenant.py  dns_registry.py  enhanced_caching_factories.py  enhanced_message_queue.py  enhanced_rpc.py  federated_delivery_guarantees.py  federated_message_queue.py  federated_queue_gossip.py  global_cache.py  intermediate_results.py  location_consistency.py  logging.py  message_queue.py  message_queue_manager.py  model.py  namespace_policy.py  payloads.py  port_allocator.py  registry.py  (+15 more)
mpreg/datastructures/: __init__.py  advanced_cache_coherence.py  block.py  blockchain.py  blockchain_crypto.py  blockchain_store.py  blockchain_types.py  cache_structures.py  cluster_types.py  dao.py  dao_types.py  federated_cache_coherence.py  federated_types.py  function_identity.py  graph_algorithms.py  leader_election.py  merkle_tree.py  message_structures.py  metrics_structures.py  production_raft.py  production_raft_implementation.py  production_raft_rpcs.py  raft_codec.py  raft_storage_adapters.py  raft_task_manager.py  rpc_spec.py  service_spec.py  transaction.py  trie.py  type_aliases.py  vector_clock.py
mpreg/dns/: __init__.py  names.py  records.py  resolver.py  server.py
mpreg/examples/: README.md  __init__.py  advanced_cluster_examples.py  auto_port_cluster_bootstrap.py  benchmark_demo.py  benchmarks.py  cache_client_server_demo.py  caching_demo.py  comprehensive_performance_tests.py  fabric_route_security_demo.py  fabric_snapshot_restart_demo.py  federated_queue_examples.py  federation_alerting_demo.py  federation_benchmark.py  federation_demo.py  federation_examples.py  (+19 more)
scripts/: run_demo_smoke.sh  run_demo_suite.sh
tests/: CONCURRENT_TESTING_STATUS.md  README_PORT_MIGRATION.md  conftest.py  performance_research_framework.py  port_allocator.py  test_advanced_cache_coherence.py  test_advanced_cache_ops.py  test_advanced_cluster_scenarios.py  test_advanced_topological_research.py  test_async_test_context.py  test_auto_discovery.py  test_blockchain_federation_integration.py  test_blockchain_message_queue.py  test_blockchain_persistence.py  test_cache_federation_bridge.py  test_cache_federation_serialization.py  test_cache_federation_transport.py  test_cache_pubsub_integration.py  test_caching.py  test_clean_performance_research.py  test_comprehensive_auto_discovery.py  test_consensus_gossip_integration.py  test_consensus_gossip_integration_live.py  test_datastructures_block.py  test_datastructures_blockchain.py  test_datastructures_cache.py  test_datastructures_dao.py  test_datastructures_federated_cache_coherence.py  test_datastructures_merkle_tree.py  test_datastructures_transaction.py  test_datastructures_trie.py  test_datastructures_vector_clock.py  test_dependency_resolution.py  test_distributed_state.py  test_dns_auto_discovery.py  test_dns_client.py  test_dns_gateway_truncation.py  test_dns_names.py  test_dns_resolver.py  test_dual_registration_scenarios.py  (+127 more)
(+258 files in other folders)
