[tool.poetry]
name = "mpreg"
version = "0.1.0"
description = "Matt’s Protocol for Results Everywhere Guaranteed"
authors = ["Matt Stancliff <matt@genges.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.10,<4"
fastapi = "^0.115.14"
orjson = "^3.9.7"
websockets = "^12.0"
loguru = "^0.7.3"
ulid-py = "^1.1.0"
jsonargparse = "^4.24.1"
pydantic = "^2.11.7"
pydantic-settings = "^2.0.0"

[tool.poetry.scripts]
mpreg-server = "mpreg.server:cmd"
mpreg-client = "mpreg.client:cmd"
mpreg = "mpreg.cli:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.2"
mypy = "^1.16.1"
pytest = "^8.2.2"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.23.6"
types-psutil = "^7.0.0.20250601"
psutil = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
extend-select = [
  # convert legacy python syntax to modern syntax
  "UP",
  # isort imports
  "I",
]
ignore = ["E402", "F841", "E741"] # Ignore Module level import not at top of file

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
check_untyped_defs = true
show_traceback = true
pretty = true
