[project]
name = "mpreg"
version = "0.1.0"
description = "Matt’s Protocol for Results Everywhere Guaranteed"
authors = [{ name = "Matt Stancliff", email = "matt@genges.com" }]
requires-python = " >=3.11,<4"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "fastapi>=0.115.14",
    "orjson>=3.9.7",
    "websockets>=12.0",
    "loguru>=0.7.3",
    "ulid-py>=1.1.0",
    "jsonargparse>=4.24.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.0.0",
    "pympler>=1.1",
    "click>=8.1.0",
    "rich>=13.7.0",
    "aiofiles>=24.1.0",
    "aiohttp>=3.10.0",
    "cryptography>=45.0.5",
    "sortedcontainers>=2.4.0",
    "aiosqlite>=0.21.0",
    "dnslib>=0.9.24",
]

[project.scripts]
mpreg = "mpreg.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.12.2",
    "mypy>=1.16.1",
    "pytest>=8.2.2",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.23.6",
    "types-psutil>=7.0.0.20250601",
    "psutil>=6.1.0",
    "pytest-xdist>=3.8.0",
    "types-aiofiles>=24.1.0.20250708",
    "pytest-cov>=6.2.1",
    "hypothesis>=6.136.0",
    "networkx>=3.5",
    "types-networkx>=3.5.0.20250712",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
extend-select = [
  # convert legacy python syntax to modern syntax
  "UP",
  # isort imports
  "I",
  "SIM",
  "PTH",
  "FURB",
  "PGH",
  "F401"
]
ignore = [
  "E402",  # Module level import not at top of file
  "PGH003", # Allow generic type: ignore for third-party libraries without stubs
  "SIM102", # ignore: "don't allow nested if statements"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Configure test markers
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
# Test discovery
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Concurrent testing with pytest-xdist
addopts = [
    "--tb=short",           # Shorter traceback format
    "--strict-markers",     # Strict marker enforcement
    "--disable-warnings",   # Disable warnings during test runs
]

[tool.mypy]
python_version = "3.14"
check_untyped_defs = true
disallow_untyped_defs = true
pretty = true
show_traceback = true
warn_return_any = true
warn_unused_configs = true
